--- a/src/app/auto-message/auto-message.component.html
+++ b/src/app/auto-message/auto-message.component.html
@@ -22,12 +22,7 @@
                         </div>
                     </div>
                     <div id="overlay" class="new_event_menu_box" style="display: none;">
-                        <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
-                            <a class="text-white "><img src="/assets/images/overlay.png">
-                                <p>New Event</p>
-                            </a>
-                        </div>
-                        <div class="">
+                                                <div class="">
                             <div class="event_menu">
                                 <div class="all_menu_content  d-flex flex-wrap align-content-center">
                                     <ul>
@@ -135,7 +130,7 @@
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
                             </div>
-                            <p >Select Bank Account</p>
+                            <p class="text-white">Select Bank Account</p>
                         </div>
                     </div>
                 </div>
