--- a/src/app/event-activity/event-activity.component.html
+++ b/src/app/event-activity/event-activity.component.html
@@ -147,7 +147,7 @@
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
                             </div>
-                            <p>Select Bank Account</p>
+                            <p class="text-white">Select Bank Account</p>
                         </div>
                     </div>
                 </div>
