--- a/src/app/display-page/display-page.component.html
+++ b/src/app/display-page/display-page.component.html
@@ -18,8 +18,7 @@
             <div class="single_home_slide pink_slide">
                 <div class="inner_content_box d-flex flex-wrap align-content-center">
                     <div class="inner_content_elements_holder">
-                        <h3 class="text-white">T<div>
-                            </div>hen, we’re all set to <br> help you do that with <br> style </h3>
+                        <h3 class="text-white">Then, we’re all set to <br> help you do that with <br> style </h3>
                     </div>
                 </div>
             </div>
