--- a/src/app/messages-of-event/messages-of-event.component.html
+++ b/src/app/messages-of-event/messages-of-event.component.html
@@ -129,7 +129,7 @@
                                 <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                     src="{{path}}{{singleEventDetails.profilePhoto}}">
                             </div>
-                            <p>Select Bank Account</p>
+                            <p class="text-white"> Select Bank Account</p>
                         </div>
                     </div>
                 </div>
