--- a/src/app/bank-details/bank-details.component.html
+++ b/src/app/bank-details/bank-details.component.html
@@ -173,7 +173,7 @@
                                     <input type="radio" name="checkButton" id="box1" value="direct">
                                     <span class="checkmark"></span>
                                 </label>
-                                <label class="container" *ngIf="eventDetails">Franster on
+                                <label class="container" *ngIf="eventDetails">Transfer on
                                     {{eventDetails.paymentDeadlineDate | date}} to my account (this option saves
                                     you on alert notifications)
                                     <input type="radio" name="checkButton" id="box2" value="indirect">
