--- a/src/app/messages-of-event/messages-of-event.component.html
+++ b/src/app/messages-of-event/messages-of-event.component.html
@@ -70,7 +70,7 @@
                     </div>
 
                     <div class="eventD_detail text-white">
-                        <p>We look forward to having you of the manage collections of Kayode and Your. Kindly pay for
+                        <p>We look forward to having you at the celebration of Kayode and Your. Kindly pay for
                             aso
                             ebi here. Thank you.</p>
                     </div>
