--- a/src/app/view-event/view-event.component.html
+++ b/src/app/view-event/view-event.component.html
@@ -16,7 +16,7 @@
         <h3 class="text-center user_name" data-toggle="tooltip" title="{{eventHashTag}}">{{eventHashTag}}</h3>
 
         <div class="cart_pic text-center" (click)="myCart(item._id)" *ngFor="let item of allDetailsofEvent">
-            <img src="/assets/images/cart.png" data-toggle="tooltip" title="My Cart">
+            <img src="/assets/images/cart.png" data-toggle="tooltip" *ngIf="isJoined == true" title="My Cart">
         </div>
         <div class="veiw_event">
             <div class="Join_inner_content_box h-100 mb-3">
@@ -102,7 +102,7 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-6">
-                                                                    <div class="add_to_cart_btn"
+                                                                    <div class="add_to_cart_btn" *ngIf="isJoined == true"
                                                                         (click)="addToCart(item._id,male._id)">
                                                                         <a class="text-white"
                                                                            >Add to Cart</a>
@@ -129,8 +129,8 @@
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-6">
-                                                                    <div class="add_to_cart_btn"
-                                                                        (click)="addToCart(item._id,female._id)">
+                                                                    <div class="add_to_cart_btn" *ngIf="isJoined == true"
+                                                                         (click)="addToCart(item._id,female._id)">
                                                                         <a class="text-white"
                                                                             >Add to Cart</a>
                                                                     </div>
