--- a/src/app/verification/verification.component.html
+++ b/src/app/verification/verification.component.html
@@ -5,7 +5,7 @@
                 <div class="join_aso_ebi_sec3">
                     <div class="Join_inner_content_box">
                         <div class="inner_content_btn">
-                            <a (click)="nextSection('initialStep', 'secondStep')"
+                            <a routerLink="/signUp"
                                 class="btn_join3 text-white float-left">Join</a>
                             <a routerLink="/login" class="btn_enter3 float-right">Enter</a>
                             <form class="join_form">
