--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -6,7 +6,7 @@
 </div>
 
 
-<div class="step_1" style="display:none">
+<div class="step_1" >
     <section class="event_slider_section d-flex flex-wrap align-content-center">
         <div class="container-fluid">
             <h3 class="text-center aso_heading">Aso Ebi</h3>
@@ -653,7 +653,7 @@
 </div>
 
 
-<div class="step_3" >
+<div class="step_3" style="display:none">
     <div class="form_input">
         <div class="row justify-content-center m-0">
             <section class="slider_page_section d-flex flex-wrap align-content-center">
@@ -732,7 +732,7 @@
                                             <div class="add_group">
                                             <div class="col-12 mt-3 text-white  text-right">
                                                <i class="fa fa-plus-circle" aria-hidden="true"
-                                                (click)="createdEventDetails ? AddGroupField(eventActivities[i]._id) : AddGroupField(selectedActivityToAddGroup)"></i>
+                                                (click)="createdEventDetails ? AddGroupField(selectedActivityToAddGroup) : AddGroupField(selectedActivityToAddGroup)"></i>
                                             </div>
                                         </div>
                                         <div class="freind_family">
